CMAKE_MINIMUM_REQUIRED( VERSION 3.3.0 )
PROJECT( pybackoff CXX )

SET( CMAKE_CXX_STANDARD 11 )
SET( CMAKE_CXX_STANDARD_REQUIRED ON )

INCLUDE( CheckCXXCompilerFlag )

FIND_PACKAGE(PythonInterp 3)
FIND_PACKAGE(PythonLibs   3)
FIND_PACKAGE(Boost)
IF (Boost_FOUND)
    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
    ADD_DEFINITIONS( "-DHAS_BOOST" )
ENDIF()

INCLUDE_DIRECTORIES(
  ${PYTHON_INCLUDE_DIRS}
  ${Boost_INCLUDE_DIRS}
  #${PYBIND11_INCLUDE_DIRS}
)

ADD_LIBRARY( pybackoff SHARED 
    "src/pybackoff.cc" 
)

TARGET_LINK_LIBRARIES(pybackoff ${PYTHON_LIBRARIES} ${Boost_LIBRARIES})

CONFIGURE_FILE( pybackoff/__init__.py
    ${CMAKE_CURRENT_BINARY_DIR}/pybackoff/__init__.py
)

CONFIGURE_FILE( setup.py
    ${CMAKE_CURRENT_BINARY_DIR}/setup.py
)
